compiler/testData/diagnostics/testsWithJsStdLib/jsCode/warning.kt

fun main(args: Array<String>): Unit {
    js("var a =<!JSCODE_WARNING!> 08<!>;")
}